# PikmiBlog

./: README.md  package-lock.json
Pikmi-blog/: .gitignore  .pre-commit-config.yaml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
Pikmi-blog/.github/workflows/: test.yml
Pikmi-blog/backend/: Dockerfile  jest.config.ts  package-lock.json  package.json
Pikmi-blog/backend/prisma/: schema.prisma
Pikmi-blog/backend/prisma/migrations/20251207185901_initial_migration/: migration.sql
Pikmi-blog/backend/src/: db.ts  index.ts
Pikmi-blog/backend/src/__tests__/: setup.ts
Pikmi-blog/backend/src/__tests__/helpers/: testHelpers.ts
Pikmi-blog/backend/src/__tests__/integration/: index.test.ts
Pikmi-blog/backend/src/middleware/: auth.ts  errorHandler.ts  validation.ts
Pikmi-blog/backend/src/routes/: auth.ts  comments.ts  favorites.ts  posts.ts  users.ts
Pikmi-blog/database/: erd-diagram.md  schema.sql
Pikmi-blog/frontend/: index.html  jest.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
Pikmi-blog/frontend/.github/workflows/: ci.yml
Pikmi-blog/frontend/src/: App.tsx  index.css  setupTests.ts
Pikmi-blog/frontend/src/__tests__/: AuthContext.test.tsx  Login.test.tsx
Pikmi-blog/frontend/src/api/: axios.ts
Pikmi-blog/frontend/src/components/ui/: Card.tsx  (+4 more)
Pikmi-blog/frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
Pikmi-blog/frontend/src/pages/: CreatePost.tsx  EditPost.tsx  Favorites.tsx  Home.tsx  Login.tsx  PostDetail.tsx  Profile.tsx  Register.tsx  SearchUsers.tsx  UserProfile.tsx
(+11 files in other folders)
